--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,32 @@
     transform: rotate(360deg);
   }
 }
+
+
+body {
+  padding-top: 50px;
+  background-image: linear-gradient(to right, #61dafb, yellow);
+}
+
+.counter {
+  width: 50px;
+  height: 50px;
+  text-align: center;
+  font-size: 35px;
+  margin-right: 10px;
+  background-color: #61dafb;
+  color: white;
+  border-radius: 5px;
+  border-color: antiquewhite;
+}
+
+.extra {
+  width: 150px;
+  color: beige;
+}
+
+.result {
+  margin-top: 0;
+  font-size: 100px;
+  color: wheatblue;
+}
